# x86cc

./: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  README.md  configure.ac  configure.sh
src/: arguments.h  color.h  lexer.c  lexer.h  main.c  out.c  out.h  parser.h  really.c  really.h  version.h
src/standards/: c99.h  standard.h
